# voxign

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  basic.py  requirements.txt
include/: camera.h  common.h  compiler.h  pixels.h  preview.h  render.h  trackball.h  view.h  viewer.h  voxels.h
marcher/: __init__.py  camera.py  compiler.py  framework.py  function.py  library.py  variable.py  vector.py
shaders/: bounds.vert  pass.glsl  render.glsl  slice.glsl  test.glsl  voxels.frag  voxels.geom  voxels.vert
src/: camera.cpp  common.cpp  compiler.cpp  main.cpp  pixels.cpp  preview.cpp  trackball.cpp  viewer.cpp  voxels.cpp
